completed banner crud
